# midiloop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
midiloop/: __init__.py  __main__.py
