[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midiloop"
version = "0.1.0"
description = "A small utility that runs a virtual MIDI loopback device"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = ["Topic :: Utilities", "Topic :: Multimedia :: Sound/Audio :: MIDI"]
keywords = ["midi"]
dependencies = [
  "mido >= 1.3, < 2",
  "python-rtmidi >= 1.5, < 2",
]

[project.urls]
Homepage = "https://github.com/fwcd/midiloop"
Repository = "https://github.com/fwcd/midiloop"

[project.scripts]
midiloop = "midiloop:main"

[tool.setuptools.packages]
find = {}

[tool.pyright]
include = ["midiloop"]
